# init-film

./: .gitignore  LICENSE  README-ExternallyManagedEnvironments.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py  uninstall.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml  test-package.yml
init_film.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
logo/: Init-Film_Logo.ai
src/initfilm/: __init__.py  add_shortcut.py  clearconsole.py  cli.py  config.json  config.py  config_default.json  ffmpeg_installscript.py  ffmpeg_presets.json  license.py  main.py  remove_shortcut.py  shortcut.py  templates.py  transcode.py
