[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "init-film"
dynamic = ["version"]
authors = [
    {name = "Andreas Delabie"},
    {email = "andreas.delabie@gmail.com"}
]
description = "Tired of manually creating folder structures for your film/video projects? Want a folder structure that dynamically changes based on the needs for your project? Then Init-Film was made for you! By filmmakers, for filmmakers ;)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "darkdetect>=0.8",
    "pyperclip>=1.9",
    "yaspin>=3.1",
    "typer>=0.16.0",
    "ffmpeg-python>=0.2.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Video"
]

[project.urls]
Repository = "https://github.com/andreasdelabie/init-film"
Changelog = "https://github.com/andreasdelabie/init-film/releases"
Issues = "https://github.com/andreasdelabie/init-film/issues"
Donate = "https://www.buymeacoffee.com/andreasdelabie"

[project.scripts]
init-film = "initfilm.cli:cli"

[tool.setuptools.package-data]
initfilm = ["*.ico", "*.json"]

[tool.setuptools.dynamic]
version = {attr = "initfilm.__version__"}