# Copyright (C) 2025  Andreas Delabie

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "init-film"
dynamic = ["version"]
authors = [
    {name = "Andreas Delabie"},
    {email = "andreas.delabie@gmail.com"}
]
description = "Tired of manually creating folder structures for your film/video projects? Want a folder structure that dynamically changes based on the needs for your project? Then Init-Film was made for you! By filmmakers, for filmmakers ;)"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
dependencies = [
    "darkdetect>=0.8",
    "pyperclip>=1.9",
    "yaspin>=3.1",
    "typer>=0.16.0"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video"
]

[project.urls]
Repository = "https://github.com/andreasdelabie/init-film"
Documentation = "https://github.com/andreasdelabie/init-film/wiki"
Changelog = "https://github.com/andreasdelabie/init-film/releases"
Issues = "https://github.com/andreasdelabie/init-film/issues"
Donate = "https://www.buymeacoffee.com/andreasdelabie"

[project.scripts]
init-film = "initfilm.cli:cli"

[tool.setuptools.package-data]
initfilm = ["*.ico", "*.json"]

[tool.setuptools.dynamic]
version = {attr = "initfilm.__version__"}